[package]
name = "geo-songs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
reqwest = { version = "0.11.23", features = ["multipart"] }
rocket = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
